--- a/report/10-analysis.tex
+++ b/report/10-analysis.tex
@@ -1,8 +1,8 @@
 \chapter{Анализ предметной области}
 
-В данном разделе будут представлены классификация основных типов сигналов БПЛА и изучены основные методов глушения, описаны и разделены машинное обучение и глубокое обучение и представлены и сравнены нейронные сети, подходящие под поставленную цель.
+В данном разделе будут представлены классификация основных типов сигналов и изучены основные методов формирования помехи, описаны и разделены машинное обучение и глубокое обучение и представлены и сравнены нейронные сети, подходящие под поставленную цель.
 
-\section{Классификация основных типов сигналов и модуляций БПЛА}
+\section{Классификация основных типов сигналов и модуляций}
 
 \subsection{Управляющий диапазон}
 Современные коммерческие дроны обычно работают в стандартном Wi-Fi диапазоне (2.4 ГГц и 5 ГГц) \cite{wifidiapazon}. Даже базовые коммерческие дроны обычно имеют несколько запрограммированных автоматических функций, таких как отслеживание положения дрона или функция <<возврат домой>>, срабатывающая в случае потери управляющего сигнала. Для этих функций используется <<Глобальная Навигационная Система Позиционирования>> (GNPS), однако уже началась интеграция 4G и 5G для управления дронами \cite{4gand5g}.
@@ -11,17 +11,17 @@
 
 На данный момент для управления дронами используются сигналы с расширенным спектром \cite{spreadspecsignals}. Эти типы сигналов обладают хорошей устойчивостью к помехам, как естественным (шум) так и преднамеренным (глушение). Принцип расширения спектра заключается в в модуляции \cite{signalmodulation} узкополосного сигнала, содержащего информацию, псевдослучайным широкополосным сигналом. При такой модуляции получается сигнал с расширенным спектром.
 
-\section{Способы глушения БПЛА}
+\section{Способы формирования помехи}
 
-Постановка помех БПЛА --- это метод нейтрализации этих устройств. Самыми основными подразделениями глушения являются заглушение шумом и заглушение ответом \cite{radioelecpomeh}. Важно отметить, что всегда глушится приемник, так как требуется меньшая мощность помех, чтобы обеспечить достаточное отношение помех к сигналу \cite{signaltointer}.
+Постановка помех --- это метод нейтрализации этих приемников сигнала. Самыми основными методами формирования помехи: с помощью шума и активного сигнала \cite{radioelecpomeh}. Важно отметить, что целью воздействия всегда является приемник, так как требуется меньшая мощность помех, чтобы обеспечить достаточное отношение помех к сигналу \cite{signaltointer}.
 
-\subsection{Заглушение шумом}
+\subsection{Формирования помехи с помощью шума}
 
-Принцип этого типа глушения заключается в передаче шума требуемой формы, мощности и полосы пропускания, который используется для перекрытия заглушенного сигнала и предотвращая передачи между приемником и передатчиком. В результате уровень помех на стороне приемника увеличивается, что увеличивает отношение помех к сигналу \cite{signaltointer}. Этот тип глушения широко используется против коммуникационных и не коммуникационных сигналов. Не коммуникационные сигналы обычно используются в области активной радиолокации, следовательно, рассматриваться не будут.
+Принцип этого типа формирования помехи заключается в передаче шума требуемой формы, мощности и полосы пропускания, который используется для перекрытия изначального сигнала и предотвращая передачи между приемником и передатчиком. В результате уровень помех на стороне приемника увеличивается, что увеличивает отношение помех к сигналу \cite{signaltointer}. Этот тип глушения широко используется против коммуникационных и не коммуникационных сигналов. Не коммуникационные сигналы обычно используются в области активной радиолокации, следовательно, рассматриваться не будут.
 
 \subsubsection{Узкополосный шум}
 
-Этот тип полосы пропускания определяется частотным спектром заглушенного сигнала, рис \ref{img:narrowband}. В связи с тем, что в настоящее время для целей связи широко используются сигналы с расширенным спектром, этот шум обычно непригоден для создания помех БПЛА.
+Этот тип полосы пропускания определяется частотным спектром изначального сигнала, (см. рисунок \ref{img:narrowband}). В связи с тем, что в настоящее время для целей связи широко используются сигналы с расширенным спектром, этот шум обычно непригоден для создания помех БПЛА.
 
 \img{70mm}{narrowband}{Спектр узкополосных шумовых помех}
 
@@ -29,7 +29,7 @@
 
 \subsubsection{Сверхширокополосный шум}
 
-Этот тип шумовых помех охватывает всю полосу пропускания сигнала связи, рис \ref{img:ultrawodeband}. Его недостатком является необходимость высокого уровня мощности для обеспечения достаточного отношения шума к сигналу для эффективного глушения. В результате сверхширокополосный шум снижает пропускную способность канала системы. Это приводит к уменьшению отношения сигнала к шуму на стороне приемника и увеличению количества ошибок передачи.
+Этот тип шумовых помех охватывает всю полосу пропускания сигнала связи, (см. рисунок \ref{img:ultrawodeband}). Его недостатком является необходимость высокого уровня мощности для обеспечения достаточного отношения шума к сигналу для эффективного формирования помехи. В результате сверхширокополосный шум снижает пропускную способность канала системы. Это приводит к уменьшению отношения сигнала к шуму на стороне приемника и увеличению количества ошибок передачи.
 
 \img{70mm}{ultrawodeband}{Спектр сверх широких шумовых помех}
 
@@ -37,10 +37,18 @@
 
 \subsubsection{Развертка шума}
  
-Принцип этого типа глушения заключается в быстром перемещении относительно узкополосного сигнала по всему интересующему диапазону. Сигналом помехи может быть шум или импульсный сигнал. Забивается только одна частота. Хотя охватывается весь спектр скачкообразной перестройки частоты, скачки выполнять не обязательно. Из-за слабой мощности сигнала GPS также происходит экономия необходимой мощности помехового сигнала для достижения требуемого отношения помех к сигналу. Поскольку большинство БПЛА имеют некоторую функцию автопилота (например, упомянутую выше функцию «возврата домой»), глушение сигналов GPS является одним из способов нейтрализовать дроны, не уничтожая их.
+Принцип этого типа формирования помехи заключается в быстром перемещении относительно узкополосного сигнала по всему интересующему диапазону. Сигналом помехи может быть шум или импульсный сигнал. Забивается только одна частота. Хотя охватывается весь спектр скачкообразной перестройки частоты, скачки выполнять не обязательно. Из-за слабой мощности сигнала GPS также происходит экономия необходимой мощности помехового сигнала для достижения требуемого отношения помех к сигналу. Поскольку большинство БПЛА имеют некоторую функцию автопилота (например, упомянутую выше функцию «возврата домой»), глушение сигналов GPS является одним из способов нейтрализовать дроны, не уничтожая их.
 
 \subsubsection{Интеллектуальный шум}
 
-При этом типе помех воздействуют только на необходимые сигналы в спектре, чтобы предотвратить связь между приемником и передатчиком. Однако требуется предварительное знание типа сигнала помехи. Для этого типа глушения необходим анализ протоколов, используемых различными производителями БПЛА. Из анализа протоколов и входящего сигнала можно определить критические точки, которые могут быть затронуты. Затем можно создать сигнал с аналогичными параметрами. Этот тип глушения является наиболее энергоэффективным и эффективным, но, по логике вещей, и наиболее технологически требовательным.
+При этом типе помех воздействуют только на необходимые сигналы в спектре, чтобы предотвратить связь между приемником и передатчиком. Однако требуется предварительное знание типа сигнала помехи. Для этого типа глушения необходим анализ протоколов, используемых различными производителями приемников. Из анализа протоколов и входящего сигнала можно определить критические точки, которые могут быть затронуты. Затем можно создать сигнал с аналогичными параметрами. Этот тип глушения является наиболее энергоэффективным и эффективным, но, по логике вещей, и наиболее технологически требовательным.
 
-\subsection{Заглушение ответом}
+\subsection{Формирования помехи с помощью активного сигнала}
+
+Этот способ также называется подделыванием. В отличие от шума, он не направлен на создание помех в определенной части спектра и, таким образом, на предотвращение передачи. Его цель --- создать и отправить сигнал, аналогичный исходному сигналу. Такой сигнал с более высоким уровнем мощности, чем у законного передатчика, затем используется для обмана приемника. Это может иметь различные последствия, например, сбить с толку GPS. Как следует из описанного принципа, конструкция такого глушителя более сложна по сравнению с шумовым глушителем. Для шумовых помех требуется использовать простой приемник, чтобы найти интересующий сигнал в спектре. В случае подделывания ответа необходимо принять исходный сигнал, изменить его и отправить новый ложный сигнал достаточной мощности, чтобы, приемник <<поверил>>, что это настоящий контролирующий сигнал.
+
+Декодирование исходного сигнала или его протокола является сложным и требует обратного проектирования, чтобы понять его структуру. Кроме того, требуется учитывать влияние окружающей среды, поскольку исходный сигнал может колебаться от различных воздействий колеблется (например, для GPS необходимо учитывать положение спутника и погоду). Некоторые неблагоприятные воздействия на передачу значительно устранены в приемниках цели: например, в GPS колебания амплитуды уменьшаются с помощью схем автоматической регулировки усиления \cite{autogaincontrol}. Однако по принципу своей работы эта система делает устройство более склонным к глушению отклика --- обман GPS может привести к путанице в данных навигации \cite{gpsspoofing}.
+
+Еще одной проблемой, особенно с военной техникой, является шифрование, которое сильно усложняет получение изначального сигнала.
+
+Хотя существуют различные способы перехвата и классификации сигналов \cite{analisanddecod}, эти методы обычно требуют много времени. Таким образом возникает проблема реагирования в режиме реального времени.
