--- a/report/51-biblio.bib
+++ b/report/51-biblio.bib
@@ -1,28 +1,3 @@
-@inbook{
-	Dameray_Levenshtein,
-	author="Черненький В. М., Гапанюк Ю. Е.",
-	title="Методика идентификации пассажира по установочным данным / Вестник МГТУ им. Н.Э. Баумана. Сер. “Приборостроение”",
-	volume=163,
-	chapter=4,
-	publisher="--- М.: Издательство МГТУ им. Н.Э. Баумана",
-	pages="30-34",
-	language="russian",
-	year=2012
-}
-
-@inbook{
-	Levenshtein,
-	author="Левенштейн, В. И.",
-	title="Двоичные коды с исправлением выпадений, вставок и замещений символов / Доклады АН СССР.",
-	publisher="-- М.: «Наука»",
-	volume=163,
-	chapter=4,
-	pages="845--848",
-	language="russian",
-	year=1965
-}
-
-
 @misc{4gand5g,
 	title="Communications Standards for Unmanned Aircraft Systems: The 3GPP Perspective and Research Drivers [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/9392776} (дата обращения: 23.11.2022)"
@@ -53,4 +28,17 @@
 	howpublished="Режим доступа: \url{https://www.extendingbroadband.com/aerial-tracking/drone-communication-systems/} (дата обращения: 23.11.2022)"
 }
 
+@misc{autogaincontrol,
+	title="Автоматическая регулировка усиления [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://en.wikipedia.org/wiki/Automatic_gain_control} (дата обращения: 24.11.2022)"
+}
 
+@misc{gpsspoofing,
+	title="Development of a GPS spoofing apparatus to attack a DJI Matrice 100 Quadcopter [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://jgps.springeropen.com/articles/10.1186/s41445-018-0018-3} (дата обращения: 24.11.2022)"
+}
+
+@misc{analisanddecod,
+	title="Analysis and decoding of radio signals for remote control of drones [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/7747781} (дата обращения: 24.11.2022)"
+}
