--- a/report/10-analysis.tex
+++ b/report/10-analysis.tex
@@ -52,3 +52,79 @@
 Еще одной проблемой, особенно с военной техникой, является шифрование, которое сильно усложняет получение изначального сигнала.
 
 Хотя существуют различные способы перехвата и классификации сигналов \cite{analisanddecod}, эти методы обычно требуют много времени. Таким образом возникает проблема реагирования в режиме реального времени.
+
+\section{Машинное обучение}
+
+Для того, чтобы не только перехватить и расшифровать, но и преобразовать сигнал, стоит использовать методы машинного и глубокого обучения. Данные методы помогают оптимизировать прием и расшифровку сигнала более эффективно, чем классические алгоритмы \cite{deeplearnofdm}, следовательно стоит рассмотреть возможность использования машинного или глубокого обучения для преобразования сигнала.
+
+\subsection{Базовое понятие машинного обучения}
+
+\textbf{Ассоциация машинного обучения} основана на поиске связей между переменными в большой базе данных. Метод используется для установления сильных правил, обнаруженных в базе данных с помощью некоторых мер интересности \cite{introdmachlearn}. Этот основанный на правилах подход генерирует также новые правила по мере анализа дополнительных данных. Конечной целью, исходя из достаточно большого набора данных, помочь машине имитировать выделение и создание возможности нахождения абстрактных ассоциаций из новых неклассифицированных данных.
+
+\textbf{Классификация машинного обучения} --- базовая проблема, которая часто решается при работе с большими объемами данных. Требуется классифицировать большой набор входных данных на несколько выходных классов. Простейшей классификацией явялется разделение на два класса ($A$ и $B$). После обучения классификатора прошлыми данными правило классификации может выглядеть как $if/else$:
+\begin{equation}
+	C = \begin{cases}
+		A, \text{если } condition_{1} > \theta_{1} \text{ и } condition_{2} > \theta_{2}, \\
+		B, \text{иначе}.
+	\end{cases}
+\end{equation}
+
+
+Многие приложения машинного обучения имеют разные типы классификаторов. Эти классификаторы часто используются для распознавания образов. Примером может служить преобразование рукописного текста в компьютерную запись. Здесь много переменных, так как у каждого человека разный почерк (наклон, размер шрифта, тип пера и т. д.). Проблема с разным почерком заключается в том, что у не существует стандартизированной системы того, как должны выглядеть отдельные буквы. Следовательно, уместно использовать классификатор на основе машинного обучения, который извлекает формулу из большой выборки обучающих данных, в которую, хотя и не все, удается включить большинство шрифтов. Другим примером может быть распознавание дорожных знаков в автономных транспортных средствах. Здесь изображение с камеры представляет собой систему отдельных пикселей. Основываясь на контрасте, цветах и   узорах, можно было идентифицировать соответствующий дорожный знак. Кроме того, такие классификаторы могут быть использованы в медицине (для диагностики), распознавания речи или биометрии \cite{introdmachlearn}.
+
+Изучение правил или формул извлечения данных создает простую модель, описывающую эти данные. Это дает объяснение заданного набора данных, которое было бы невозможно получить при анализе этих данных человеком (такая обработка заняла бы нереальное количество времени). Еще одним преимуществом этого подхода является сжатие. Формула является гораздо более простым объяснением проблемы, чем сами данные. В результате это экономит память и вычислительные требования на компьютере. Другим выгодным применением может быть установка границ, когда классификатор выбирает входные данные, которые не попадают в выбранные классы. Эти входные данные могут потребовать особого внимания при обработке данных \cite{introdmachlearn}.
+
+\textbf{Регрессия машинного обучения} --- модель взаимосвязи между несколькими входными переменными и выходной зависимой переменной.
+
+Регрессия делится на несколько видов:
+\begin{itemize}
+	\item[-] линейная --- метод для моделирования отношений между одной независимой входной переменной (переменной функции) т выходной зависимой переменной;
+	\item[-] множественная линейная --- взаимосвязь создается между несколькими входными переменными и выходной зависимой переменной;
+	\item[-] полиномиальная --- модель становится нелинейной комбинацией входным переменных, то есть среди них могут быть экспоненциальные переменные;
+	\item[-] логистическая --- метод классификации данных по двум классам с помощью сигмоидальной функции. Этот тип регрессии обычно обычно используется для распределения данных по классам вероятности.
+\end{itemize}
+
+\subsection{Категории машинного обучения}
+
+Машинное обучение можно разделить на несколько категорий: контролируемое обучение, неконтролируемое, полууправляемое и обучение с подкреплением.
+
+\subsubsection{Контролируемое обучение}
+
+В эту категорию попадают как проблемы регрессии, так и проблемы классификации. Имеется набор входных данных $X$ и требуемых выходов $Y$ , задача состоит в том, чтобы найти функцию или формулу, описывающую связь между X и Y. Подход машинного обучения предполагает модель, определенную как:
+\begin{equation}
+	Y = g(X | \theta),
+\end{equation}
+где $g()$ — модель, $\theta$ — ее параметр. $Y$ — номер регрессии и код класса для классификации. $g()$ — функция регрессии или дискриминаторная функция. Алгоритм машинного обучения затем оптимизирует $\theta$ так, чтобы ошибка аппроксимации была минимальной по отношению к обучающему набору данных. Входной набор данных $X$ обычно делится на обучающие и тестовые данные. Данные обучения используются для создания модели зависимости между входными данными $X$ и выходными данными $Y$ и, таким образом, для нахождения $g()$. Тестовые данные используются для измерения точности модели, таким образом, описанная оптимизация $\theta$. Поэтому для контролируемого обучения необходимо иметь достаточный набор обучающих данных $X$, для которых известны правильные выходные данные $Y$. Эти выходные данные предоставляются «учителем» (экспертом, создающим алгоритм). Поэтому эта категория называется обучением с учителем \cite{artificialintel}.
+
+\subsubsection{Неконтролируемое обучение}
+
+В неконтролируемом обучении нет «учителя», и нет доступных правильных результатов. Доступны только входные данные, и цель состоит в том, чтобы найти закономерность во входных данных. Во входном наборе одни паттерны появляются чаще других, и мы хотим знать, что вообще происходит, а что нет. В статистике эта задача называется функцией плотности вероятности \cite{surverymashin}.
+Одним из методов определения функции плотности вероятности является так называемая кластеризация. Здесь мы пытаемся найти разные группы со схожими параметрами во входных данных. Примером кластеризации является сжатие изображений. В этом случае входными данными являются пиксели со значениями RGB. Алгоритм кластеризации объединяет пиксели с похожими цветами в одну группу. Созданные таким образом группы соответствуют цветам, часто встречающимся на изображении. Таким образом можно значительно уменьшить количество используемых цветов (или количество битов, присваиваемых одному цвету) и таким образом добиться требуемого сжатия \cite{introdmachlearn}.
+
+\subsubsection{Полууправляемое обучение}
+
+Полууправляемое обучение представляет собой комбинацию двух вышеупомянутых типов, где обучающие данные доступны с известными выходными данными и без них \cite{surverymashin}. Имеется набор неразмеченных данных, а для части из них у есть дополнительная информация (небольшое количество размеченных данных). Полууправляемое обучение имеет большое практическое значение, так как во многих случаях маркируется только часть данных, а получение остальных меток может быть весьма затруднительным (например, необходимость в специальных устройствах или дорогостоящие и медленные эксперименты). Есть две задачи, которые решает полууправляемое обучение \cite{transactonne}.
+\begin{enumerate}[label=\arabic*)]
+	\item Индуктивное полууправляемое обучение --- предсказание меток для данных тестирования.
+	\item Трансдуктивное полууправляемое обучение --- маркировка неразмеченных данных в обучающем наборе.
+\end{enumerate}
+
+\subsubsection{Обучение с подкреплением}
+
+В обучении с подкреплением проблемы решаются с помощью последовательности действий, использующих правила проб и ошибок . Одно действие не важно — важно, чтобы вся последовательность приводила к правильному результату. В этом основное отличие от предыдущих категорий, которые основывались на использовании исторических данных, тогда как алгоритмы обучения с подкреплением обучаются на предыдущих попытках решить заданную сетевую задачу \cite{surverymashin}. На рисунке 12 показаны пять основных элементов, необходимых для обучения с подкреплением \cite{transactonne}:
+
+\img{45mm}{strategia}{Обучение с подкреплением}
+
+\FloatBarrier
+
+\begin{itemize}
+	\item[-]  агент: объект, который может выполнить действие $A_{t}$ и получить вознаграждение $R_{t}$;
+	\item[-] среда: представление реального мира, в котором действует агент;
+	\item[-] вознаграждение $R_{t}$: обратная связь агенту относительно выполненного действия $A_{t}$;
+	\item[-] стратегия: обзор каждого состояния $S_{t}$ по отношению к выполненному действию $A_{t}$;
+	\item[-] значение функции: представляет, насколько хорошим является состояние $S_{t}$, но на самом деле это ожидаемое вознаграждение $R_{t}$ в будущем по отношению к достигнутому состоянию $S_{t}$.
+\end{itemize}
+
+Таким образом, цель обучения с подкреплением состоит в том, чтобы выбрать стратегию (выполнение определенных действий $A_{t}$), которая максимизирует предопределенную функцию вознаграждения.
+
+\section{Глубокое обучение}
