--- a/report/51-biblio.bib
+++ b/report/51-biblio.bib
@@ -1,3 +1,16 @@
+@inbook{
+	introdmachlearn,
+	author="Alpaydin E.",
+	title="Introduction to Machine Learning",
+	volume=660,
+	chapter=2,
+	publisher="--- MIT",
+	pages="33-34",
+	language="english",
+	year=2020
+}
+
+
 @misc{4gand5g,
 	title="Communications Standards for Unmanned Aircraft Systems: The 3GPP Perspective and Research Drivers [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/9392776} (дата обращения: 23.11.2022)"
@@ -42,3 +55,28 @@
 	title="Analysis and decoding of radio signals for remote control of drones [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/7747781} (дата обращения: 24.11.2022)"
 }
+
+@misc{deeplearnofdm,
+	title="A Deep Learning-Based Intelligent Receiver for OFDM [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/abstract/document/9637770} (дата обращения: 24.11.2022)"
+}
+
+@misc{surverymashin,
+	title="A Survey on Machine-Learning Techniques for UAV-Based Communications [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.mdpi.com/1424-8220/19/23/5170} (дата обращения: 27.11.2022)"
+}
+
+@misc{artificialintel,
+	title="Artificial Intelligence for UAV-Enabled Wireless	Networks: A Survey [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/9411810} (дата обращения: 27.11.2022)"
+}
+
+@ARTICLE{transactonne,
+	author={Chapelle, O. and Scholkopf, B. and Zien, Eds., A.},
+	journal={IEEE Transactions on Neural Networks}, 
+	title={Semi-Supervised Learning (Chapelle, O. et al., Eds.; 2006) [Book reviews]}, 
+	year={2009},
+	volume={20},
+	number={3},
+	pages={542-542},
+	doi={10.1109/TNN.2009.2015974}}
