--- a/report/10-analysis.tex
+++ b/report/10-analysis.tex
@@ -111,7 +111,7 @@
 
 \subsubsection{Обучение с подкреплением}
 
-В обучении с подкреплением проблемы решаются с помощью последовательности действий, использующих правила проб и ошибок . Одно действие не важно — важно, чтобы вся последовательность приводила к правильному результату. В этом основное отличие от предыдущих категорий, которые основывались на использовании исторических данных, тогда как алгоритмы обучения с подкреплением обучаются на предыдущих попытках решить заданную сетевую задачу \cite{surverymashin}. На рисунке 12 показаны пять основных элементов, необходимых для обучения с подкреплением \cite{transactonne}:
+В обучении с подкреплением проблемы решаются с помощью последовательности действий, использующих правила проб и ошибок . Одно действие не важно — важно, чтобы вся последовательность приводила к правильному результату. В этом основное отличие от предыдущих категорий, которые основывались на использовании исторических данных, тогда как алгоритмы обучения с подкреплением обучаются на предыдущих попытках решить заданную сетевую задачу \cite{surverymashin}. На рисунке \ref{img:strategia} показаны пять основных элементов, необходимых для обучения с подкреплением \cite{transactonne}:
 
 \img{45mm}{strategia}{Обучение с подкреплением}
 
@@ -128,3 +128,68 @@
 Таким образом, цель обучения с подкреплением состоит в том, чтобы выбрать стратегию (выполнение определенных действий $A_{t}$), которая максимизирует предопределенную функцию вознаграждения.
 
 \section{Глубокое обучение}
+
+Другой специфический класс машинного обучения — это глубокое обучение (ГО), где несколько слоев используются для создания искусственной нейронной сети, которая должна быть в состоянии принимать <<умные>> решения без какого-либо вмешательства человека. Принцип работы алгоритмов ГО заключается в извлечении информации из необработанных данных через несколько слоев нелинейных процессоров (отдельных слоев искусственной нейронной сети) с целью предсказания или выполнения действия относительно итоговой цели. Эти действия осуществляются без явного программирования. Базовыми моделями ГО, используемыми для этих целей, являются уже упомянутые нейронные сети. Однако к моделям ГО можно отнести только сети с достаточным количеством скрытых слоев (обычно более одного). Основным преимуществом ГО перед классическим машинным обучением является автоматическое извлечение паттернов \cite{deeplearninmob}.
+
+Глубокое обучение — это разновидность машинного обучения, имитирующая биологические нейронные сети. DL позволяет компьютерам создавать сложные концепции из простых. Текущие операции в нейронной сети обычно определяются как комбинация определенной группы единиц с нелинейной функцией активации. Эта комбинация подлежит взвешиванию. Такие операции вместе с единицами вывода образуют так называемые слои \cite{deeplearninmob}.
+
+\subsection{Модели глубокого обучения}
+
+В разделе описания машинного обучения описаны модели контролируемого, неконтролируемого, полууправляемого обучения и обучения с подкреплением, которые используются в разных областях. Архитектура глубокого обучения может использоваться во всех этих областях.
+
+\subsubsection{Многослойный персептрон --- МСП}
+
+МСП --- это математическая функция, которая присваивает выходные значения набору входных значений. Сложная функция состоит из множества простых функций. МСП — это первая конструкция искусственной нейронной сети, состоящая как минимум из трех слоев (один входной, один скрытый и один выходной). Нейроны в каждом слое плотно связаны. Это приводит к большому количеству весов конфигураций. На рисунке \ref{img:mlp} показан пример МСП с двумя скрытыми слоями. Раньше МСП широко использовались, но в настоящее время их популярность снижается из-за их сложности и средней производительности. В настоящее время МСП обычно используются в качестве строительного блока для более сложных алгоритмовc.
+
+\img{80mm}{mlp}{Многослойный персептрон}
+
+\FloatBarrier
+
+\subsubsection{Ограниченная машина Больцмана --- ОМБ}
+
+ОМБ изначально были разработаны для целей неконтролируемого обучения. Пример ОМБ показан на рисунке \ref{img:rbm}. Он состоит из видимых и скрытых слоев. Отличие от МСП в том, что нейроны из слоя $v$ могут воздействовать на нейроны из скрытого слоя $h$, и это работает и наоборот. В МСП входной вектор воздействует на скрытые элементы, но обратный процесс невозможен. Недостатком ОМБ является сложность процесса обучения. Модели на основе ОМБ обычно используются для инициализации весов нейронной сети. ОМБ также можно накладывать друг на друга для создания более глубоких моделей, называемых сетями с глубоким доверием \cite{beginguidetorbm}.
+
+\img{80mm}{rbm}{Ограниченная машина Больцмана}
+
+\FloatBarrier
+
+\subsubsection{Автокодировщик --- АК}
+
+АК разработаны для целей неконтролируемого обучения. АК пытается скопировать ввод в вывод. Они часто используются для получения компактных представлений данных. Поэтому их применение находится в области уменьшения размерности (алгоритмы уменьшения размерности являются одним из типичных методов машинного обучения). Внутри АК есть скрытый слой, описывающий код, представляющий входные данные. АК устроен так, что он не копирует ввод точно, а только приближает его. Это может привести к обнаружению полезных шаблонов на этапах данных, поскольку АК вынужден расставлять приоритеты для определенных аспектов, чтобы сделать копию. Расширенные версии этого алгоритма также используются для инициализации весов более сложных архитектур \cite{introdmachlearn}. Их также можно использовать для решения проблем сетевой безопасности. Пример АК показан на рисунке \ref{img:ae}.
+
+\img{100mm}{ae}{Автокодировщик}
+
+\FloatBarrier
+
+\subsubsection{Сверточные нейронные сети --- СНС}
+
+СНС --- это специализированные типы искусственных нейронных сетей, которые используются для обработки данных, которые имеют известную топологию, подобную сетке (например, одномерные данные с временной выборкой или пиксельную сетку двумерного изображения) \cite{introdmachlearn}. Изначально они были разработаны для машинного зрения. В отличие от МСП, они не используют полную взаимосвязь между уровнями. Вместо этого они используют набор локально связанных фильтров для выявления корреляций между различными секторами данных. Здесь создается так называемый слой свертки, который <<сканирует>> вход и выдает результат с помощью упомянутых фильтров \cite{deeplearninmob}. СНС улучшает базовый МСП в трех важных областях \cite{introdmachlearn}:
+\begin{itemize}
+	\item[-] разреженное взаимодействие;
+	\item[-] совместное использование параметров;
+	\item[-] эквивариантное представление (симметричная функции между двумя пространствами).
+\end{itemize}
+
+Эти свойства значительно сокращают количество параметров модели. Ядро свертки (слой) меньше входного слоя из-за более тонких взаимодействий. Совместное использование параметров достигается за счет использования одного и того же ядра свертки для «сканирования» всего входного пространства. Это также снижает риск переобучения. Эквивариантные представления означают, что операции свертки инвариантны относительно перевода, масштаба и формы. Это полезно, например, при распознавании изображений \cite{introdmachlearn}. Примером может служить распознавание дорожных знаков в автономных транспортных средствах, когда дорожный знак может располагаться в разных местах изображения, снятого камерой. Принцип СНС показан на рисунке \ref{img:cnn}.
+
+\img{60mm}{cnn}{Сверточные нейронные сети}
+
+\FloatBarrier
+
+\subsubsection{Генеративно-состязательная сеть --- ГСС}
+
+ГСС основана на теории игр, где генерирующая сеть должна конкурировать с другой. Таким образом, ГСС представляет собой архитектуру, в которой используются две модели (две нейронные сети). Генераторная модель $G$ служит для аппроксимации требуемых входных данных. Модель разделения $D$ пытается определить, исходит ли выборка входных данных из фактических обучающих данных или из выходных данных генераторной модели $G$. При этом обе нейронные сети обучаются. Алгоритм $G$ обучен максимизировать ошибку $D$. С помощью этой системы обе сети улучшают друг друга. Поэтому ГСС используется для создания новых синтетических данных, которые напоминают реальные данные. Они широко используются в области генерации изображений, видео и аудио. Описанный выше принцип показан на рисунке \ref{img:gan} \cite{deeplearninmob}.
+
+\img{80mm}{gan}{Генеративно-состязательная сеть}
+
+\FloatBarrier
+
+\subsubsection{Рекуррентная нейронная сеть --- РНС}
+
+РНС используется, когда данные имеют последовательный характер (имеется последовательная связь между выборками, например, данные в таблице как функция времени). Они широко используются в обработке естественного языка или распознавании речи. Их архитектура похожа на другие типы нейронных сетей. Основное отличие состоит в том, что РНС содержит цикл для запоминания и передачи результатов от предыдущих нейронов (слоев). На каждом этапе эти сети производят выходные данные посредством повторяющихся соединений между скрытыми единицами. Его принцип показан на рисунке \ref{img:rnn} \cite{deeplearninmob}.
+
+\img{80mm}{rnn}{Рекуррентная нейронная сеть}
+
+\FloatBarrier
+
+Методы глубокого обучения, как и базовые методы машинного обучения, широко используются в области коммуникационных технологий и приложений. В передаче и принятии сигналов используются различные технологии. В настоящее время более сложные модели глубокого обучения в основном используются для приложений приемников сигналов. Ранние модели МСП и ОМБ служат скорее строительными блоками для более сложных моделей. СНС и ее варианты \cite{quavdeeplearn} в частности были популярны, но для многих конкретных задач также используются другие модели, такие как РНС, ГСС и АК \cite{mitigatingdeeplearn}. Это всегда зависит от конкретной задачи, так как не существует универсальной модели, подходящей для всех решаемых задач. Поэтому все упомянутые выше модели — это всего лишь варианты вышеупомянутого узкого ИИ.
