--- a/report/51-biblio.bib
+++ b/report/51-biblio.bib
@@ -78,5 +78,24 @@
 	year={2009},
 	volume={20},
 	number={3},
-	pages={542-542},
-	doi={10.1109/TNN.2009.2015974}}
+	pages={542-542}}
+
+@misc{deeplearninmob,
+	title="Deep Learning in Mobile and Wireless Networking: A Survey [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/8666641} (дата обращения: 27.11.2022)"
+}
+
+@misc{beginguidetorbm,
+	title="A Beginner's Guide to Restricted Boltzmann Machines (RBMs) [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://wiki.pathmind.com/restricted-boltzmann-machine} (дата обращения: 27.11.2022)"
+}
+
+@misc{quavdeeplearn,
+	title="Deep Learning based System Identification of Quadcopter Unmanned Aerial Vehicle [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/9332059} (дата обращения: 27.11.2022)"
+}
+
+@misc{mitigatingdeeplearn,
+	title="Deep Learning for Launching and Mitigating Wireless Jamming Attacks [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/8558114} (дата обращения: 27.11.2022)"
+}
