--- a/report/10-analysis.tex
+++ b/report/10-analysis.tex
@@ -193,3 +193,23 @@
 \FloatBarrier
 
 Методы глубокого обучения, как и базовые методы машинного обучения, широко используются в области коммуникационных технологий и приложений. В передаче и принятии сигналов используются различные технологии. В настоящее время более сложные модели глубокого обучения в основном используются для приложений приемников сигналов. Ранние модели МСП и ОМБ служат скорее строительными блоками для более сложных моделей. СНС и ее варианты \cite{quavdeeplearn} в частности были популярны, но для многих конкретных задач также используются другие модели, такие как РНС, ГСС и АК \cite{mitigatingdeeplearn}. Это всегда зависит от конкретной задачи, так как не существует универсальной модели, подходящей для всех решаемых задач. Поэтому все упомянутые выше модели — это всего лишь варианты вышеупомянутого узкого ИИ.
+
+\subsection{Преимущества и недостатки использования методов ГО в беспроводной связи}
+
+Применять методы глубокого обучения лишь из-за того, что они могут быть функциональны, неэффективно. Во многих случаях традиционные методы, основанные на других алгоритмах, более эффективны. Однако в области беспроводной связи методы DL находят широкое применение \cite{radiosproof}. В этой области доступно большое количество разнородных данных, где для некоторых задач их обработка традиционными методами была бы затруднительна. В других случаях использование традиционных методов может быть ограничено, и поэтому необходимо искать другие подходы. Применение более сложных методов подавления приемников сигналов (с целью обмана этих самых приемников) в прошлом было чрезвычайно сложной задачей. Достижения в области сигналов связи сделали эту задачу еще более сложной. Здесь сталкиваются с ограничениями классической обработки сигналов, например, в разведывательном приемнике генератора помех, который должен демодулировать неизвестный сигнал. Поэтому здесь можно рассмотреть другой подход, и недавние исследования (например, \cite{recieverbasedondl}) показывают, что использование методов глубокого обучения может быть целесообразным при обработке таких сложных сигналов.
+
+\subsubsection{Преимущества}
+
+Первым важным преимуществом приложений алгоритма глубокого обучения является извлечение признаков. Эти алгоритмы способны извлекать высокоуровневые признаки из данных со сложной структурой \cite{bigdataanal}. С точки зрения беспроводной связи это одна из важнейших особенностей алгоритмов ГО. Это связано с тем, что среда беспроводной сети очень сложна, и интересующие сигналы могут распространяться на уровне шума или даже ниже. На такие сигналы также влияют различные факторы. Из-за этого демодуляция этих сигналов является сложной задачей. Эта трудность еще больше возрастает, когда рассматривается анализ неизвестного сигнала.
+
+Второе преимущество связано с характеристиками среды (беспроводной сети), в которой исследуется использование методов ГО. Беспроводная сетевая среда производит большой объем данных. Алгоритмы глубокого обучения способны обрабатывать такие объемы данных и могут извлечь из них дополнительную пользу, потому что большие наборы данных для обучения нейронных сетей могут предотвратить переобучение модели \cite{overfittingmeasument} (это означает, что модель будет соответствовать обучающим данным почти идеально, но некорректно обрабатывать новые поступающие данные).
+
+Еще одним преимуществом является обработка неразмеченных данных. Задача состоит в анализе различных неизвестных сигналов приемником-разведчиком постановщика помех. Нет доступных правильных результатов или меток, которые должна получить модель. Модели ГО состоят из различных неконтролируемых моделей, которые могут использовать немаркированные данные и изучать полезные закономерности.
+
+\subsubsection{Недостатки}
+
+Хотя обработка больших объемов данных является одним из преимуществ, она также имеет один существенный недостаток: зависимость модели от данных. Для достаточной точности модели требуются большие обучающие наборы данных. Беспроводные сети производят большой объем данных, но их сбор может быть дорогим, а также могут возникнуть проблемы с конфиденциальностью \cite{deeplearninmob}. Для сравнения, другие подходы, например слепая демодуляция \cite{blinddespreading}, не требуют таких больших объемов данных для правильного функционирования. Для некоторых из этих подходов требуется всего несколько выборок неизвестного сигнала, который необходимо проанализировать.
+
+Другим недостатком является то, что модели ГО могут требовать больших вычислительных ресурсов. Существует потребность в передовых компонентах параллельных вычислений (например, графических процессорах, высокопроизводительных микросхемах). Эти нейронные сети требуют сложных структур для достижения достаточной точности. Однако место ограничивает использование этих моделей на встроенных и мобильных устройствах \cite{deeplearninmob}.
+
+Нейронные сети обычно имеют множество гиперпараметров \cite{giperparams}, которые можно настроить. Однако нахождение их оптимальных значений является сложной задачей. Количество гиперпараметров растет экспоненциально с глубиной модели \cite{deeplearninmob}. Без правильной настройки результирующая точность модели будет не настолько высокой, насколько это возможно.
