--- a/report/51-biblio.bib
+++ b/report/51-biblio.bib
@@ -99,3 +99,33 @@
 	title="Deep Learning for Launching and Mitigating Wireless Jamming Attacks [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/8558114} (дата обращения: 27.11.2022)"
 }
+
+@misc{radiosproof,
+	title="A Survey of Spoofer Detection Techniques via Radio Frequency Fingerprinting with Focus on the GNSS Pre-Correlation Sampled Data  [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.mdpi.com/1424-8220/21/9/3012} (дата обращения: 27.11.2022)"
+}
+
+@misc{recieverbasedondl,
+	title="Deep-Waveform: A Learned OFDM Receiver Based on Deep Complex-Valued Convolutional Networks  [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/9448141} (дата обращения: 27.11.2022)"
+}
+
+@misc{bigdataanal,
+	title="Mobile big data analytics using deep learning and apache spark [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/7474340} (дата обращения: 27.11.2022)"
+}
+
+@misc{overfittingmeasument,
+	title="Overfitting Measurement of Deep Neural Networks Using No Data [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/abstract/document/9564119} (дата обращения: 27.11.2022)"
+}
+
+@misc{blinddespreading,
+	title="A Blind Despreading and Demodulation Method for QPSK-DSSS Signal With Unknown Carrier Offset Based on Matrix Subspace Analysis [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://ieeexplore.ieee.org/document/8822425} (дата обращения: 27.11.2022)"
+}
+
+@misc{giperparams,
+	title="Настройка гиперпараметров для модели [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://learn.microsoft.com/ru-ru/azure/machine-learning/how-to-tune-hyperparameters} (дата обращения: 27.11.2022)"
+}
